--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "source": [
     "### Modeling Objectives\n",
+    "\n",
     "- Train and evaluate classification models to predict satisfaction.\n",
     "- Use SHAP or LIME to explain key satisfaction drivers.\n",
-    "- Monitor performance using recall, F1, and AUC scores.\n"
+    "- Monitor performance using recall, F1 and AUC scores."
    ]
   },
   {
@@ -43,27 +44,15 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "# Import explainability libraries \n",
     "import shap\n",
-    "import lime\n",
-    "from lime.lime_tabular import LimeTabularExplainer \n",
-    "\n"
+    "import yellowbrick"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d28e6010",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df1 = pd.read_csv(\"cleaned.csv\")\n",
-    "# df1.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "2e525f1b",
    "metadata": {},
    "outputs": [
@@ -147,7 +136,7 @@
          "type": "string"
         }
        ],
-       "ref": "3aa324bb-a678-452e-b32a-037179a820a5",
+       "ref": "6c42c5d5-7985-492c-b5f9-926f3cf2baae",
        "rows": [
         [
          "0",
@@ -423,7 +412,7 @@
        "4         neutral  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,130 +425,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d7197d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing the pipeline class\n",
+    "from satisfaction_pipeline import SatisfactionPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "fe0ab252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Check for duplicate columns\n",
-    "# df1_cols = set(df1.columns)\n",
-    "# df2_cols = set(df2.columns)\n",
-    "# common_cols = df1_cols.intersection(df2_cols)\n",
-    "# print(f\"Common columns: {common_cols}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "32b5a937",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Combine df1 and df2 \n",
-    "# # Get unique columns from df2 that aren't in df1\n",
-    "# df2_unique_cols = [col for col in df2.columns if col not in df1.columns]\n",
-    "\n",
-    "# # Merge on all common columns\n",
-    "# common_cols = list(set(df1.columns).intersection(set(df2.columns)))\n",
-    "# merged_df = pd.merge(df1, df2[common_cols + df2_unique_cols], on=common_cols, how='outer')\n",
-    "\n",
-    "# merged_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f5635195",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# merged_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0d28a8b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create binary target: 1 for satisfied (Strongly Agree, Agree), 0 for not satisfied\n",
-    "df['Satisfied'] = df['Satisfaction Response'].apply(\n",
-    "    lambda x: 1 if x in ['Strongly Agree', 'Agree'] else 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fcfdb40b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select optimal features based on df2 structure\n",
-    "features = ['Agency Name', 'Complaint Type', 'Borough', 'Survey Year', \n",
-    "           'Survey Month', 'Cluster', 'Sentiment Score']\n",
-    "\n",
-    "X = df[features].copy()\n",
-    "y = df['Satisfied']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0227dcf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encode categorical variables\n",
-    "le_dict = {}\n",
-    "for col in X.select_dtypes(include=['object']).columns:\n",
-    "    le = LabelEncoder()\n",
-    "    X[col] = le.fit_transform(X[col].astype(str))\n",
-    "    le_dict[col] = le"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "dd9eae35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "64336c54",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=42)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "RandomForestClassifier(random_state=42)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Train Random Forest (best for this type of data)\n",
-    "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "1aa28e3e",
+   "id": "e0d93c8c",
    "metadata": {},
    "outputs": [
     {
@@ -568,60 +446,9 @@
      "text": [
       "Recall: 0.983\n",
       "F1 Score: 0.926\n",
-      "AUC Score: 0.971\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate\n",
-    "y_pred = clf.predict(X_test)\n",
-    "y_pred_proba = clf.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "print(f\"Recall: {recall_score(y_test, y_pred):.3f}\")\n",
-    "print(f\"F1 Score: {f1_score(y_test, y_pred):.3f}\")\n",
-    "print(f\"AUC Score: {roc_auc_score(y_test, y_pred_proba):.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "6276f7f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
+      "AUC Score: 0.971\n",
       "\n",
-      "Not Satisfied       0.99      0.93      0.96     48544\n",
-      "    Satisfied       0.88      0.98      0.93     24394\n",
-      "\n",
-      "     accuracy                           0.95     72938\n",
-      "    macro avg       0.93      0.96      0.94     72938\n",
-      " weighted avg       0.95      0.95      0.95     72938\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Classification Report:\")\n",
-    "print(classification_report(y_test, y_pred, target_names=['Not Satisfied', 'Satisfied']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e20c7ed6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Top Features:\n",
+      "Top 5 Important Features:\n",
       "Cluster            0.907347\n",
       "Complaint Type     0.035440\n",
       "Survey Month       0.017973\n",
@@ -629,33 +456,150 @@
       "Borough            0.009906\n",
       "dtype: float64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<satisfaction_pipeline.SatisfactionPipeline at 0x21165c21910>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Feature importance\n",
-    "feat_importances = pd.Series(clf.feature_importances_, index=features)\n",
-    "print(\"\\nTop Features:\")\n",
-    "print(feat_importances.nlargest(5))"
+    "# Initialize and train pipeline\n",
+    "satisfaction_model = SatisfactionPipeline()\n",
+    "# Fit the model\n",
+    "satisfaction_model.fit(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33de157",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions\n",
+    "data = df\n",
+    "predictions = satisfaction_model.predict(data)\n",
+    "probabilities = satisfaction_model.predict_proba(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3eab7a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Predictions: [1 0 1 ... 0 1 0]\n",
+      "Satisfaction Probabilities: [0.85833333 0.         0.93940476 ... 0.38114286 0.9065613  0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nPredictions: {predictions}\")\n",
+    "print(f\"Satisfaction Probabilities: {probabilities[:, 1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f224dc23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create target\n",
+    "df['Satisfied'] = df['Satisfaction Response'].apply(\n",
+    "    lambda x: 1 if x in ['Strongly Agree', 'Agree'] else 0\n",
+    ")\n",
+    "\n",
+    "# Select features\n",
+    "features = ['Agency Name', 'Complaint Type', 'Borough', 'Survey Year', 'Survey Month', 'Cluster', 'Sentiment Score']\n",
+    "X = df[features].copy()\n",
+    "y = df['Satisfied']\n",
+    "\n",
+    "# Encode categorical variables\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le_dict = {}\n",
+    "for col in X.select_dtypes(include=['object']).columns:\n",
+    "    le = LabelEncoder()\n",
+    "    X[col] = le.fit_transform(X[col].astype(str))\n",
+    "    le_dict[col] = le\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efadf90c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost F1: 0.932\n",
+      "Recall: 0.999\n",
+      "AUC Score: 0.963\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "# Quick XGBoost comparison\n",
+    "xgb_model = xgb.XGBClassifier(random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_pred = xgb_model.predict(X_test)\n",
+    "print(f\"XGBoost F1: {f1_score(y_test, xgb_pred):.3f}\")\n",
+    "print(f\"XGBoost Recall: {recall_score(y_test, xgb_pred):.3f}\")\n",
+    "print(f\"XGBoost AUC Score: {roc_auc_score(y_test, xgb_pred):.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "key_insights",
+   "id": "e18e0f34",
    "metadata": {},
    "source": [
-    "### Key Steps Summary:\n",
+    "The comparison between Random Forest and XGBoost models reveals marginal performance differences, with XGBoost achieving slightly higher F1 score (0.932 vs 0.926) and recall (0.999 vs 0.983), while Random Forest maintains a better AUC score (0.971 vs 0.963). Despite XGBoost's marginal improvements, the Random Forest model remains the recommended choice due to its superior interpretability, stability, and lower risk of overfitting, particularly given that XGBoost's near-perfect 99.9% recall may indicate potential overfitting to the training data. Both models demonstrate exceptional performance for satisfaction prediction, but Random Forest offers the optimal balance of accuracy, reliability and business interpretability for production deployment.\n",
     "\n",
-    "1. **Data Preparation**: Load data, handle categorical variables, split into train/test\n",
-    "2. **Model Training**: Train multiple classification models (Logistic Regression, Random Forest, Gradient Boosting)\n",
-    "3. **Performance Evaluation**: Compare models using recall, F1, and AUC scores\n",
-    "4. **Model Explanation**: Use SHAP for global feature importance and LIME for local explanations\n",
-    "5. **Performance Monitoring**: Visualize and track model performance metrics\n",
+    "### Comparison of Random Forest and XGBoost\n",
     "\n",
-    "**Next Steps:**\n",
-    "- Uncomment and adapt the code with your actual data\n",
-    "- Replace placeholder column names with your actual feature and target columns\n",
-    "- Consider hyperparameter tuning for the best performing model\n",
-    "- Analyze SHAP/LIME results to identify key satisfaction drivers"
+    "| **Metric** | **Random Forest** | **XGBoost** | **Difference** |\n",
+    "| ---------- | ----------------- | ----------- | -------------- |\n",
+    "| F1 Score   | 0.926             | 0.932       | +0.6%          |\n",
+    "| Recall     | 0.983             | 0.999       | +1.6%          |\n",
+    "| AUC Score  | 0.971             | 0.963       | -0.8%          |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "848fbd0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to satisfaction_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save model\n",
+    "satisfaction_model.save_model('satisfaction_model.pkl')"
    ]
   }
  ],
