Updated README and deployment files

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -2,26 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62b8d854",
+   "id": "a378bbd2",
    "metadata": {},
    "source": [
-    "![API Docs](http://localhost:8000/docs)\n",
+    "## Deployment\n",
     "\n",
-    "![Get Options](http://localhost:8000/options)\n",
+    "### Deployment Objectives \n",
     "\n",
-    "![Make Predictions POST to:](http://localhost:8000/predict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22fab3fd",
-   "metadata": {},
-   "source": [
-    "Streamlit Deployment\n",
-    "We successfully deployed your NYC 311 satisfaction prediction model using Streamlit, creating an interactive web application that provides an intuitive user interface for making predictions. The Streamlit app features dropdown selectors for categorical inputs (Agency Name, Complaint Type, Descriptor, Borough) and numeric inputs for year and month, allowing users to easily select from valid encoded options without needing to know the underlying numerical mappings. When users click the \"Predict Satisfaction\" button, the app loads the trained Random Forest model and label encodings, processes the input data through the same preprocessing pipeline used during training, and displays the satisfaction probability as a percentage. This approach provides a user-friendly demonstration interface that's perfect for showcasing the model's capabilities to stakeholders and end-users who prefer visual interactions over API calls.\n",
+    "1. **Interactive User Interface**: Deploy a Streamlit web application providing non-technical users with dropdown menus and real-time satisfaction probability predictions for GoK Huduma service requests.\n",
     "\n",
-    "FastAPI Deployment (fastapi_app2.py)\n",
-    "We developed a robust REST API using FastAPI that transforms your machine learning model into a production-ready service capable of handling programmatic requests and integrating with other applications. The API includes several key endpoints: /options returns all valid categorical values for dropdown population (with numpy scalar conversion to ensure JSON compatibility), /predict accepts POST requests with JSON payloads to generate satisfaction probability predictions, /health provides system status monitoring, and a /reload-model endpoint that enables hot-swapping of updated models without server restarts - crucial for iterative model development. The FastAPI implementation handles error management gracefully, validates input data through Pydantic models, and provides automatic interactive documentation at /docs. This architecture is designed specifically for model iteration workflows, allowing you to retrain models, save new pickle files, and reload them seamlessly while maintaining API availability, making it ideal for production environments and integration with other systems or applications."
+    "2. **Production API Service**: Create a FastAPI REST endpoint enabling programmatic access to the satisfaction prediction model with JSON request/response handling for system integration.\n",
+    "\n",
+    "3. **Hot Model Reloading**: Implement seamless model updates through API endpoints allowing new model versions to be deployed without service interruption or server restarts.\n",
+    "\n",
+    "### Deployment Implementation Steps\n",
+    "\n",
+    "1. **Model Serialization**: Saved trained SatisfactionPipeline with encoders using joblib to `satisfaction_model.pkl`\n",
+    "2. **Streamlit Interface**: Built interactive web app with dropdown menus and real-time prediction display\n",
+    "3. **FastAPI Backend**: Created REST endpoints for predictions, health checks and model reloading\n",
+    "4. **Error Handling**: Implemented comprehensive exception management and input validation\n",
+    "5. **Testing & Validation**: Verified both interfaces work with sample predictions and edge cases\n",
+    "\n",
+    "We successfully deployed the NYC 311 satisfaction prediction model through two complementary interfaces that serve different user needs and integration requirements. The Streamlit web application provides an intuitive, interactive interface where users can select agency names, complaint types, boroughs, and temporal parameters through dropdown menus, receiving real-time satisfaction probability predictions with visual indicators and interpretations. This user-friendly interface democratizes access to the model's capabilities, allowing stakeholders and end-users to explore predictions without technical expertise while displaying model performance metrics and providing clear satisfaction likelihood assessments.\n",
+    "\n",
+    "The FastAPI REST API transforms the machine learning model into a production-ready service capable of handling programmatic requests and seamless integration with existing systems. The API includes comprehensive endpoints for health monitoring, prediction generation with JSON request/response handling, and critically, a hot model reloading capability that enables updating trained models without service interruption. This architecture supports continuous model improvement workflows, allowing data scientists to retrain models, save updated pickle files, and deploy new versions instantly while maintaining API availability, making it ideal for production environments where uptime and model iteration speed are essential."
    ]
   }
  ],
