Updated the deployment and the README files

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -9,23 +9,27 @@
     "\n",
     "### Deployment Objectives \n",
     "\n",
-    "1. **Interactive User Interface**: Deploy a Streamlit web application providing non-technical users with dropdown menus and real-time satisfaction probability predictions for GoK Huduma service requests.\n",
+    "1. **Real-time Prediction Service** - Deploy a production-ready API that can process individual complaint requests and return satisfaction predictions with confidence scores in real-time\n",
     "\n",
-    "2. **Production API Service**: Create a FastAPI REST endpoint enabling programmatic access to the satisfaction prediction model with JSON request/response handling for system integration.\n",
+    "2. **User-friendly Interface** - Provide an intuitive web application that allows non-technical users to input complaint data and receive instant satisfaction predictions with explanations\n",
     "\n",
-    "3. **Hot Model Reloading**: Implement seamless model updates through API endpoints allowing new model versions to be deployed without service interruption or server restarts.\n",
+    "3. **Scalable Batch Processing** - Enable bulk prediction capabilities for processing multiple complaints simultaneously through CSV upload functionality\n",
     "\n",
     "### Deployment Implementation Steps\n",
     "\n",
-    "1. **Model Serialization**: Saved trained SatisfactionPipeline with encoders using joblib to `satisfaction_model.pkl`\n",
-    "2. **Streamlit Interface**: Built interactive web app with dropdown menus and real-time prediction display\n",
-    "3. **FastAPI Backend**: Created REST endpoints for predictions, health checks and model reloading\n",
-    "4. **Error Handling**: Implemented comprehensive exception management and input validation\n",
-    "5. **Testing & Validation**: Verified both interfaces work with sample predictions and edge cases\n",
+    "1. **Model Serialization** - Saved trained Random Forest model with encoders using joblib for persistence\n",
     "\n",
-    "We successfully deployed the NYC 311 satisfaction prediction model through two complementary interfaces that serve different user needs and integration requirements. The Streamlit web application provides an intuitive, interactive interface where users can select agency names, complaint types, boroughs, and temporal parameters through dropdown menus, receiving real-time satisfaction probability predictions with visual indicators and interpretations. This user-friendly interface democratizes access to the model's capabilities, allowing stakeholders and end-users to explore predictions without technical expertise while displaying model performance metrics and providing clear satisfaction likelihood assessments.\n",
+    "2. **API Development** - Built FastAPI backend with prediction endpoints, input validation, and error handling\n",
     "\n",
-    "The FastAPI REST API transforms the machine learning model into a production-ready service capable of handling programmatic requests and seamless integration with existing systems. The API includes comprehensive endpoints for health monitoring, prediction generation with JSON request/response handling, and critically, a hot model reloading capability that enables updating trained models without service interruption. This architecture supports continuous model improvement workflows, allowing data scientists to retrain models, save updated pickle files, and deploy new versions instantly while maintaining API availability, making it ideal for production environments where uptime and model iteration speed are essential."
+    "3. **Web Interface Creation** - Developed Streamlit frontend with dynamic dropdowns and real-time prediction display\n",
+    "\n",
+    "4. **Integration & Testing** - Connected frontend to backend API with comprehensive input validation and response formatting\n",
+    "\n",
+    "### Application Functionality\n",
+    "\n",
+    "Streamlit Application serves as the user-facing interface that provides an intuitive web-based platform for both single and batch predictions. It features dynamic dropdown menus that automatically populate complaint types based on selected agencies, real-time prediction results with confidence scores and explanations, and CSV upload functionality for bulk processing. The interface handles input validation, displays prediction summaries, and offers downloadable results, making the machine learning model accessible to non-technical users who need to assess customer satisfaction patterns.\n",
+    "\n",
+    "FastAPI Backend functions as the core prediction engine that processes incoming requests through RESTful endpoints. It handles model loading, feature extraction from raw complaint text, sentiment analysis, categorical encoding, and generates predictions with confidence scores. The API includes comprehensive error handling, input validation using Pydantic models, and provides detailed explanations for each prediction. It supports both single predictions and can be scaled for batch processing, ensuring reliable and fast response times for the Streamlit frontend while maintaining model performance and data integrity."
    ]
   }
  ],
